# risk-framework

./: .gitignore  README.md  README.results.md  pyproject.toml
config/: assets.yaml
notebooks/: ewma_pair_validation.ipynb
src/nysa_risk/: __init__.py  backtest.py  backtest_curves.py  calibrate.py  config.py  report.py  volatility.py
src/nysa_risk/extraction/: __init__.py  underlying.py
src/nysa_risk/parameters/: __init__.py  ct.py  lt.py  ltv.py
tests/: test_backtest.py  test_backtest_curves.py  test_calibrate.py  test_config.py  test_ct.py  test_lt.py  test_ltv.py  test_report.py  test_underlying_extraction.py  test_volatility.py
